...
          ),
          title: Text(
            'Financial Info',
            style: FlutterFlowTheme.of(context).headlineMedium.override(
                  font: GoogleFonts.roboto(
...
              padding: EdgeInsets.all(20.0),
              child: SingleChildScrollView(
                key: ValueKey('Column_wetv'),
                child: Column(
                  mainAxisSize: MainAxisSize.max,
...
                                children: [
                                  Text(
                                    'Monthly Salary',
                                    style: FlutterFlowTheme.of(context)
                                        .labelMedium
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('MonthlyCheck_lmjc'),
                                    controller:
                                        _model.monthlyCheckTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('additionalIncome_dm9x'),
                                    controller:
                                        _model.additionalIncomeTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('rent_f26p'),
                                    controller: _model.rentTextController,
                                    focusNode: _model.rentFocusNode,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('utilities_bac4'),
                                    controller: _model.utilitiesTextController,
                                    focusNode: _model.utilitiesFocusNode,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('foodGroceries_p64f'),
                                    controller:
                                        _model.foodGroceriesTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('transportation_m4eo'),
                                    controller:
                                        _model.transportationTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('monthlySavings_t4vo'),
                                    controller:
                                        _model.monthlySavingsTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('investments_5a4k'),
                                    controller:
                                        _model.investmentsTextController,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('totalDebt_h6yk'),
                                    controller: _model.totalDebtTextController,
                                    focusNode: _model.totalDebtFocusNode,
...
                                  ),
                                  TextFormField(
                                    key: ValueKey('monthlyDebt_n557'),
                                    controller:
                                        _model.monthlyDebtTextController,
...
                    ),
                    FFButtonWidget(
                      key: ValueKey('Button_yce1'),
                      onPressed: () async {
                        logFirebaseEvent(
...
                        context.pushNamed(Dashboardv3Widget.routeName);
                      },
                      text: 'Save Financial Info',
                      options: FFButtonOptions(
                        width: 350.0,
...
