...
                                        .bodyMedium
                                        .fontStyle,
                                  ),
                        ),
                        AuthUserStreamWidget(
                          builder: (context) => Text(
                            key: ValueKey('moneyavailable_o450'),
                            formatNumber(
                              valueOrDefault(
                                      currentUserDocument?.totalncome, 0.0) -
                                  valueOrDefault(
                                      currentUserDocument?.bills, 0.0) -
                                  valueOrDefault(
...
                                        .bodyMedium
                                        .fontStyle,
                                  ),
                        ),
                        AuthUserStreamWidget(
                          builder: (context) => Text(
                            key: ValueKey('moneyavailable_xxo6'),
                            formatNumber(
                              valueOrDefault(
                                  currentUserDocument?.availableSpendings, 0.0),
                              formatType: FormatType.custom,
                              currency: '',
                              format: '#,##0.00',
...
                ),
              ),
              Expanded(
                child: Padding(
                  padding: EdgeInsetsDirectional.fromSTEB(28.0, 0.0, 28.0, 0.0),
                  child: SingleChildScrollView(
                    key: ValueKey('Column_f23s'),
                    child: Column(
                      mainAxisSize: MainAxisSize.min,
                      children: [
                        FlutterFlowAdBanner(
                          width: 350.0,
                          height: 50.0,
...
                                logFirebaseEvent('incomePrompt');
                              } else {
                                return;
                              }
                            },
                            child: Container(
                              key: ValueKey('Container_4ph9'),
                              width: 350.0,
                              decoration: BoxDecoration(
                                color: Colors.white,
                                boxShadow: [
                                  BoxShadow(
                                    blurRadius: 12.0,
...
                                                            .fontStyle,
                                                  ),
                                            ),
                                            AuthUserStreamWidget(
                                              builder: (context) => Text(
                                                key: ValueKey(
                                                    'monthlyincome_6v4l'),
                                                formatNumber(
                                                  valueOrDefault(
                                                      currentUserDocument
                                                          ?.totalncome,
                                                      0.0),
                                                  formatType: FormatType.custom,
...
                            ),
                          ),
                        ),
                        SingleChildScrollView(
                          scrollDirection: Axis.horizontal,
                          child: Row(
                            key: ValueKey('Row_9h3c'),
                            mainAxisSize: MainAxisSize.min,
                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                            children: [
                              Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    18.0, 18.0, 18.0, 18.0),
...
                                                          .fontStyle,
                                                ),
                                          ),
                                          AuthUserStreamWidget(
                                            builder: (context) => Text(
                                              key:
                                                  ValueKey('monthlyCosts_wqhm'),
                                              formatNumber(
                                                valueOrDefault(
                                                    currentUserDocument?.bills,
                                                    0.0),
                                                formatType: FormatType.custom,
                                                currency: '',
...
                ),
              ),
              wrapWithModel(
                model: _model.navBarModel,
                updateCallback: () => safeSetState(() {}),
                child: NavBarWidget(
                  key: ValueKey('navBar_80i6'),
                ),
              ),
            ],
          ),
        ),
      ),
...
