...
                                                    .titleMedium
                                                    .fontStyle,
                                          ),
                                  indicatorColor: Colors.transparent,
                                  tabs: [
                                    Tab(
                                      key: ValueKey('SignupTab_fhcw'),
                                      text: 'Signup\n',
                                    ),
                                    Tab(
                                      text: 'Login',
                                    ),
                                  ],
...
                                        mainAxisSize: MainAxisSize.max,
                                        children: [
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key:
                                                  ValueKey('Signup-Email_sare'),
                                              controller: _model
                                                  .signupEmailTextController,
                                              focusNode:
                                                  _model.signupEmailFocusNode,
                                              onChanged: (_) =>
                                                  EasyDebounce.debounce(
...
                                            ),
                                          ),
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'Signup-Password_annp'),
                                              controller: _model
                                                  .signupPasswordTextController,
                                              focusNode: _model
                                                  .signupPasswordFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                            ),
                                          ),
                                          Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'Confirm-Password_9eqp'),
                                              controller: _model
                                                  .confirmPasswordTextController,
                                              focusNode: _model
                                                  .confirmPasswordFocusNode,
                                              autofocus: false,
                                              enabled: true,
...
                                  ),
                                  borderRadius: BorderRadius.circular(24.0),
                                ),
                              ),
                            if (_model.tabBarCurrentIndex == 0)
                              FFButtonWidget(
                                key: ValueKey('Signup-button_8yzi'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'LOGIN_PAGE_Signup-button_ON_TAP');
                                  logFirebaseEvent(
                                      'Signup-button_validate_form');
                                  if (_model.formKey1.currentState == null ||
...
